# happening

./: .env.example  Cargo.toml  docker-compose.yml
migrations/: 20230331164850_initial_tables.sql  20230411140432_add_workspaces_table.sql
src/: main.rs
src/auth/: bearer_token_header.rs  error.rs  mod.rs  model.rs  router.rs  service.rs  tokenization.rs
src/core/: database.rs  env_vars.rs  error.rs  mod.rs
src/users/: error.rs  model.rs  service.rs
src/workspaces/: error.rs  model.rs  service.rs
