[package]
name = "happening-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.27.0", features = ["rt", "macros"] }
