[package]
name = "happening-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sha2 = "0.10.6"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"] }
tokio = { version = "1.27.0", features = ["rt", "macros"] }
